--- a/templates/room/room.html
+++ b/templates/room/room.html
@@ -1,7 +1,27 @@
 {% extends "base.html" %}
 
 {% block content %}
+
+<script>
+
+    var userToDelete = '';
+
+    function rememberUser(user) {
+        userToDelete = user;
+        console.log(userToDelete)
+    }
+
+    function removeUser(){
+        fetch('/room/{{ room_id }}/remove/' + userToDelete, {
+            method: 'POST',
+            body: JSON.stringify({'user': userToDelete})
+        })
+    }
+    
+</script>
+
 {% include "room/deleteUser.html" %}
+
 <main class="">
     <h1>Room: {{ room_id }}</h1>
     <h3>Users in room</h3>
@@ -10,8 +30,8 @@
               <div class="col">
                 <div class="card h-100">
                   <div class="card-body">
-                    <h5 class="d-inline">{{ user }}</h5>
-                      <button class="btn p-0" data-bs-toggle="modal" data-bs-target="#deleteUserModal">
+                    <h5 class="d-inline">{{ user[0] }}</h5>
+                      <button class="btn p-0" data-bs-toggle="modal" data-bs-target="#deleteUserModal" onclick="rememberUser('{{ user[0] }}')">
                 <i class="fa-sharp fa-solid fa-trash"></i>
             </button>
                   </div>
